# HandsFreeGPT

./: README.md  ci.sh  docker-compose-dev.yml  pyproject.toml
.devcontainer/: devcontainer.json
docker/: Dockerfile.chroma  Dockerfile.dev  Dockerfile.memgraph  Dockerfile.pgbouncer  Dockerfile.postgres  Dockerfile.ray  alembic_init.sh  entrypoint.sh  init.sql  pgbouncer_entrypoint.sh
examples/: basic.py
handsfreegpt/: agent.py  output_parser.py  prompt.py  prompt_generator.py  tools.py
handsfreegpt/server/: app.py  config.py
handsfreegpt/server/fastapi/: __init__.py
