[tool.pdm.build]
includes = ["handsfreegpt"]

[project]
name = "HandsFreeGPT"
version = "0.1.0"
description = ""
authors = [
    {name = "cmrfrd", email = "alex@taoa.io"},
]
dependencies = [
    "boto3>=1.26.117",
    "botocore>=1.29.117",
    "nest-asyncio>=1.5.6",
    "pydantic>=1.10.7",
    "gqlalchemy>=1.4.1",
    "fastapi>=0.95.1",
    "langchain>=0.0.147",
    "chromadb>=0.3.21",
    "openai>=0.27.4",
    "duckduckgo-search>=2.8.6",
    "tiktoken>=0.3.3",
    "playwright>=1.32.1",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}
[project.optional-dependencies]
dev = [
    "black[jupyter]>=23.3.0",
    "ipykernel>=6.22.0",
    "mypy>=1.2.0",
    "pydocstyle>=6.3.0",
    "pyupgrade>=3.3.1",
    "ruff>=0.0.262",
]
test = [
    "moto>=4.1.7",
    "pytest>=7.3.1",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "pytest-env>=0.8.1",
    "pytest-mock>=3.10.0",
    "pytest-random-order>=1.1.0",
    "pytest-socket>=0.6.0",
]
types = [
    "mypy-boto3-s3>=1.26.116",
    "types-boto3>=1.0.2",
]

[[tool.mypy.overrides]]
module = [
  'astroid.*',
  'clip.*',
  'cv2.*',
  'dagster.*',
  'dagster_celery.*',
  'dask.*',
  'dill.*',
  'distributed.*',
  'dotenv.*',
  'fastapi.*',
  'fsspec.*',
  'h5py.*',
  'joblib.*',
  'keras-retinanet.*',
  'mediapipe.*',
  'moto.*',
  'open_clip.*',
  'pandas.*',
  'pydantic.*',
  'pylint.*',
  'pyonepassword.*',
  's3fs.*',
  's3path.*',
  'scipy.*',
  'semver.*',
  'skimage.*',
  'sklearn.*',
  'tensorflow.*',
  'torch.*',
  'torchvision.*',
  'xgboost.*'
]
ignore_missing_imports = true
exclude = [
  "test/**/*_test.py",
  "test/**/test_*.py"
]

[tool.pytest.ini_options]
addopts = "--cov=cvml --cov-report=term-missing --random-order"
asyncio_mode = "auto"
env = [
  "ENV=dev"
]
minversion = "6.0"
markers = [
  "integration: mark test as integration test",
  "determinism: mark test as determinism test",
]

[tool.coverage.run]
omit = [
  "**/_remote_module_non_scriptable.py",
  "test/**/*.py",
]

[tool.black]
line-length = 80
target-version = ['py39']
extend-exclude = "^/migrations$"

[tool.ruff]
line-length = 80
target-version = "py310"

[tool.mypy]
plugins = [
  "numpy.typing.mypy_plugin",
  "sqlmypy"
]
check_untyped_defs = false

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
